<resources>
    <string name="app_name">Event Booth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="custom_message">Message</string>
    <string name="message">Write a Message</string>
    <string-array name="message_array">
        <item>Congrats to the new couple</item>
        <item>Have a happy married life</item>
        <item>Food was great!</item>
        <item>Type a funny message</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="title_activity_settings">Settings</string>

    <string name="help">Feedback / Help</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="takeapic">Take a Pic</string>
    <string name="save">Save</string>
</resources>
