...
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_margin="5dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image" />
    </FrameLayout>

    <SeekBar
        android:id="@+id/fontSizeSlider"
        android:padding="10dp"
        android:progressTint="@color/colorPrimaryDark"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/camera_action"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
...
