<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item android:id="@+id/clear_image"
        android:icon="@drawable/ic_clear_white_48dp"
        android:title="@string/clear"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>